--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>student management</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
 <img src="1557717551734-codegym.png" id="logo" style="width: 1800px; height: 600px; object-fit: cover;">
