--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-<img src="1557717551734-codegym.png" id="logo" style="width: 1800px; height: 600px; object-fit: cover;">
+<img src="thiet-ke-thuong-hieu-hoc-vien-quan-ly-phat-trien-tp-hcm-dma_logo_1361785152.jpg" id="logo" style="width: 1800px; height: 600px; object-fit: cover;">
 <h1>QUẢN LÝ HỌC VIÊN</h1>
 
 <div class="container">
