--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <td>Nam</td>
                 <td>THB</td>
                 <td><img src="hoang-anh.jpg"></td>
-                <td><button class='btn edit' type="button" onclick='editStudent()'><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class='btn delete' type="button" onclick='deleteStudent()'><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class='btn edit' type="button" onclick='editStudent(0)'><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class='btn delete' type="button" onclick='deleteStudent(0)'><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             <tr>
@@ -98,8 +98,8 @@
                 <td>Nam</td>
                 <td>THA</td>
                 <td><img src="tuan-anh.jpg"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(1)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(1)"><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             <tr>
@@ -109,8 +109,8 @@
                 <td>Nữ</td>
                 <td>THE</td>
                 <td><img src="tải%20xuống.jfif"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(2)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(2)"><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             <tr>
@@ -120,8 +120,8 @@
                 <td>Nữ</td>
                 <td>THD</td>
                 <td><img src="Screenshot%202025-11-26%20113833.png"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(3)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(3)"><i class="fa-solid fa-trash-can"></i></button>
 
                 </td>
             </tr>
@@ -132,8 +132,8 @@
                 <td>Nữ</td>
                 <td>THE</td>
                 <td><img src="kieu-duyen.jpeg"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(4)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(4)"><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             <tr>
@@ -143,8 +143,8 @@
                 <td>Nữ</td>
                 <td>THE</td>
                 <td><img src="anh-the-truc.webp"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(5)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(5)"><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             <tr>
@@ -154,8 +154,8 @@
                 <td>Nam</td>
                 <td>THH</td>
                 <td><img src="5e6c572eed026b75f81682e02f83a983.jpg"></td>
-                <td><button class="btn edit" type="button" onclick="editStudent()"><i class="fa-solid fa-pen-to-square"></i></button>
-                    <button class="btn delete" type="button" onclick="deleteStudent()"><i class="fa-solid fa-trash-can"></i></button>
+                <td><button class="btn edit" type="button" onclick="editStudent(6)"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button class="btn delete" type="button" onclick="deleteStudent(6)"><i class="fa-solid fa-trash-can"></i></button>
                 </td>
             </tr>
             </thead>
